--- a/src/main/resources/templates/add-product.html
+++ b/src/main/resources/templates/add-product.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -184,12 +185,21 @@
         <img src="logo-yeni-2.png" alt="logo" />
         <nav>
           <ul class="nav__links">
-            <li><a href="#">Product Category List</a></li>
-            <li><a href="#">Product Details List</a></li>
-            <li><a href="#">Product Inquiry</a></li>
-            <li><a href="#">Raise Complaint</a></li>
-            <li><a href="#">Complaint List</a></li>
-            <li><a href="#">Product Inquiry List</a></li>
+            <div sec:authorize="hasAnyAuthority('ROLE_USER')">
+              <li><a th:href="@{/api/v1/product/categoryListByUsername(username=${#authentication.getName()})}">Product Category List</a></li>
+              <li><a th:href="@{/api/v1/product/showAllProductsByUsername(username=${#authentication.getName()})}">Product Details List</a></li>
+              <li><a th:href="@{/api/v1/inquiry/addNewProductInquiry(username=${#authentication.getName()})}">Product Inquiry</a></li>
+              <li><a th:href="@{/api/v1/complaint/addNewComplaint(username=${#authentication.getName()})}">Raise Complaint</a></li>
+              <li><a th:href="@{/api/v1/complaint/showComplaintsByUsername(username=${#authentication.getName()})}">Complaint List</a></li>
+              <li><a th:href="@{/api/v1/complaint/showAllProductInquiriesByName(username=${#authentication.getName()})}">Product Inquiry List</a></li>
+            </div>
+
+            <div sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
+              <li><a th:href="@{/api/v1/product/categoryList}">Product Category List</a></li>
+              <li><a th:href="@{/api/v1/product/showAllProducts}">Product Details List</a></li>
+              <li><a th:href="@{/api/v1/complaint/showList}">Complaint List</a></li>
+              <li><a th:href="@{/api/v1/inquiry/showList}">Product Inquiry List</a></li>
+            </div>
           </ul>
         </nav>
         <select class="input-opt-2">
@@ -198,7 +208,7 @@
           </option>
           <option><a href="#">My Profile</a></option>
           <option><a href="#">Change Password</a></option>
-          <option><a href="#">Logout</a></option>
+          <option><a th:action="@{/logout}">Logout</a></option>
         </select>
       </header>
       <div class="form-box">
