--- a/src/main/resources/templates/product-inquiry-list.html
+++ b/src/main/resources/templates/product-inquiry-list.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -173,12 +174,21 @@
     <img src="../../../../../htmld/navbarWithTable/logo-yeni-2.png" alt="logo" />
     <nav>
       <ul class="nav__links">
-        <li><a th:href="@{/api/v1/product/categoryList}">Product Category List</a></li>
-        <li><a th:href="@{/api/v1/product/showAllProducts}">Product Details List</a></li>
-        <li><a href="@{/api/v1/inquiry/}">Product Inquiry</a></li>
-        <li><a href="">Raise Complaint</a></li>
-        <li><a href="#">Complaint List</a></li>
-        <li><a th:href="@{/api/v1/inquiry/showList}">Product Inquiry List</a></li>
+        <div sec:authorize="hasAnyAuthority('ROLE_USER')">
+          <li><a th:href="@{/api/v1/product/categoryListByUsername(username=${#authentication.getName()})}">Product Category List</a></li>
+          <li><a th:href="@{/api/v1/product/showAllProductsByUsername(username=${#authentication.getName()})}">Product Details List</a></li>
+          <li><a th:href="@{/api/v1/inquiry/addNewProductInquiry(username=${#authentication.getName()})}">Product Inquiry</a></li>
+          <li><a th:href="@{/api/v1/complaint/addNewComplaint(username=${#authentication.getName()})}">Raise Complaint</a></li>
+          <li><a th:href="@{/api/v1/complaint/showComplaintsByUsername(username=${#authentication.getName()})}">Complaint List</a></li>
+          <li><a th:href="@{/api/v1/complaint/showAllProductInquiriesByName(username=${#authentication.getName()})}">Product Inquiry List</a></li>
+        </div>
+
+        <div sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
+          <li><a th:href="@{/api/v1/product/categoryList}">Product Category List</a></li>
+          <li><a th:href="@{/api/v1/product/showAllProducts}">Product Details List</a></li>
+          <li><a th:href="@{/api/v1/complaint/showList}">Complaint List</a></li>
+          <li><a th:href="@{/api/v1/inquiry/showList}">Product Inquiry List</a></li>
+        </div>
       </ul>
     </nav>
     <select class="input-opt">
@@ -199,7 +209,6 @@
         <thead>
         <tr>
           <th>Id</th>
-          <th>UUID</th>
           <th>Product Category</th>
           <th>Details</th>
           <th>E-mail</th>
@@ -210,7 +219,6 @@
         <tbody>
         <tr th:each="productInquiry:${productInquiry}">
           <td th:text="${productInquiry.id}"/>
-          <td th:text="${productInquiry.uuid}"/>
           <td th:text="${productInquiry.productCategory}"/>
           <td th:text="${productInquiry.details}"/>
           <td th:text="${productInquiry.mail}"/>
