--- a/src/main/resources/templates/product-list.html
+++ b/src/main/resources/templates/product-list.html
@@ -175,12 +175,21 @@
         <nav>
 
             <ul class="nav__links">
-                <li><a th:href="@{/api/v1/product/categoryList}">Product Category List</a></li>
-                <li><a th:href="@{/api/v1/product/showAllProducts(id=${#request.userPrincipal})}">Product Details List</a></li>
-                <li><a href="@{/api/v1/inquiry/}">Product Inquiry</a></li>
-                <li><a href="">Raise Complaint</a></li>
-                <li><a href="#">Complaint List</a></li>
-                <li><a th:href="@{/api/v1/inquiry/showList}">Product Inquiry List</a></li>
+                <div sec:authorize="hasAnyAuthority('ROLE_USER')">
+                    <li><a th:href="@{/api/v1/product/categoryListByUsername(username=${#authentication.getName()})}">Product Category List</a></li>
+                    <li><a th:href="@{/api/v1/product/showAllProductsByUsername(username=${#authentication.getName()})}">Product Details List</a></li>
+                    <li><a th:href="@{/api/v1/inquiry/addNewProductInquiry(username=${#authentication.getName()})}">Product Inquiry</a></li>
+                    <li><a th:href="@{/api/v1/complaint/addNewComplaint(username=${#authentication.getName()})}">Raise Complaint</a></li>
+                    <li><a th:href="@{/api/v1/complaint/showComplaintsByUsername(username=${#authentication.getName()})}">Complaint List</a></li>
+                    <li><a th:href="@{/api/v1/complaint/showAllProductInquiriesByName(username=${#authentication.getName()})}">Product Inquiry List</a></li>
+                </div>
+
+                <div sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
+                    <li><a th:href="@{/api/v1/product/categoryList}">Product Category List</a></li>
+                    <li><a th:href="@{/api/v1/product/showAllProducts}">Product Details List</a></li>
+                    <li><a th:href="@{/api/v1/complaint/showList}">Complaint List</a></li>
+                    <li><a th:href="@{/api/v1/inquiry/showList}">Product Inquiry List</a></li>
+                </div>
             </ul>
         </nav>
         <select class="input-opt">
