--- a/src/main/resources/templates/add-product.html
+++ b/src/main/resources/templates/add-product.html
@@ -41,7 +41,7 @@
       background-color: rgba(0, 136, 169, 1);
       backdrop-filter: blur(10px);
       border: #777;
-      border-radius: 50px;
+      /*border-radius: 50px;*/
       cursor: pointer;
       transition: all 0.3s ease 0s;
       text-decoration: none;
@@ -79,8 +79,48 @@
       transition: all 0.3s ease 0s;
     }
 
-    .nav__links li a:hover {
+    .nav__links li a:hover,
+    header a:hover{
       color: white;
+    }
+    .dropdown{
+      color: black;
+      background-color: rgba(0, 136, 169, 1);
+      display: inline-block;
+      position: relative;
+      font-size: 16px;
+      padding: 9px 20px;
+    }
+    .dropdown-options {
+      color: black;
+      background-color: rgba(0, 136, 169, 1);
+      width: 89.5px;
+      font-size: 14px;
+      padding: 15px 15px 15px 15px;
+      right: 0;
+      text-align: center;
+      display: none;
+      position: absolute;
+      overflow: auto;
+      border-radius:5px;
+      box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.4);
+    }
+    .dropdown-options a{
+      display: block;
+      color: #000000;
+      text-decoration: none;
+      padding:17px 10px;
+    }
+
+    .dropdown-options a:hover {
+      color: #0a0a23;
+      background-color: white;
+    }
+
+    .dropdown:hover .dropdown-options {
+      display: block;
+      background-color: rgba(0, 136, 169, 0.8);
+      text-align: center;
     }
     /******************************************************************/
     .form-box {
@@ -177,7 +217,6 @@
       outline: none;
       background: transparent;
     }
-
   </style>
   <body>
     <div class="hero">
@@ -191,9 +230,9 @@
               <li><a th:href="@{/api/v1/inquiry/addNewProductInquiry(username=${#authentication.getName()})}">Product Inquiry</a></li>
               <li><a th:href="@{/api/v1/complaint/addNewComplaint(username=${#authentication.getName()})}">Raise Complaint</a></li>
               <li><a th:href="@{/api/v1/complaint/showComplaintsByUsername(username=${#authentication.getName()})}">Complaint List</a></li>
-              <li><a th:href="@{/api/v1/complaint/showAllProductInquiriesByName(username=${#authentication.getName()})}">Product Inquiry List</a></li>
+              <li><a th:href="@{/api/v1/inquiry/showAllProductInquiriesByName(username=${#authentication.getName()})}">Product Inquiry List</a></li>
             </div>
-
+            
             <div sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
               <li><a th:href="@{/api/v1/product/categoryList}">Product Category List</a></li>
               <li><a th:href="@{/api/v1/product/showAllProducts}">Product Details List</a></li>
@@ -202,14 +241,14 @@
             </div>
           </ul>
         </nav>
-        <select class="input-opt-2">
-          <option selected disabled id="opt">
-            <a href="#">Hello, User</a>
-          </option>
-          <option><a href="#">My Profile</a></option>
-          <option><a href="#">Change Password</a></option>
-          <option><a th:action="@{/logout}">Logout</a></option>
-        </select>
+        <div class="dropdown">
+          <a>Hello, User</a>
+          <div class="dropdown-options">
+            <a href="#">Dashboard</a>
+            <a href="#">Setting</a>
+            <a th:href="@{/logout}">Logout</a>
+          </div>
+        </div>
       </header>
       <div class="form-box">
         <div class="title">
