--- a/src/main/resources/templates/update-complaint-form.html
+++ b/src/main/resources/templates/update-complaint-form.html
@@ -94,6 +94,46 @@
   .nav__links li a:hover {
     color: white;
   }
+
+  .dropdown{
+    color: black;
+    background-color: rgba(0, 136, 169, 1);
+    display: inline-block;
+    position: relative;
+    font-size: 16px;
+    padding: 9px 20px;
+  }
+  .dropdown-options {
+    color: black;
+    background-color: rgba(0, 136, 169, 1);
+    width: 89.5px;
+    font-size: 14px;
+    padding: 15px 15px 15px 15px;
+    right: 0;
+    text-align: center;
+    display: none;
+    position: absolute;
+    overflow: auto;
+    border-radius:5px;
+    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.4);
+  }
+  .dropdown-options a{
+    display: block;
+    color: #000000;
+    text-decoration: none;
+    padding:17px 10px;
+  }
+
+  .dropdown-options a:hover {
+    color: #0a0a23;
+    background-color: white;
+  }
+
+  .dropdown:hover .dropdown-options {
+    display: block;
+    background-color: rgba(0, 136, 169, 0.8);
+    text-align: center;
+  }
   /******************************************************************/
   .form-box {
     width: 380px;
@@ -144,6 +184,12 @@
     width: 280px;
     transition: 0.5s;
   }
+  .input-group-2 {
+    top: 50px;
+    position: absolute;
+    width: 280px;
+    transition: 0.5s;
+  }
   .input-field {
     color: #777;
     width: 100%;
@@ -185,9 +231,9 @@
     height: 120px;
     right: 300px;
     width: 55%;
-    padding: 4px 80px;
+    padding: 0px 80px;
     display: block;
-    margin: 30px 15px 30px 0;
+    margin: 17px 15px 30px 0;
     color: #777;
   }
 
@@ -217,7 +263,7 @@
           <li><a th:href="@{/api/v1/inquiry/addNewProductInquiry}">Product Inquiry</a></li>
           <li><a th:href="@{/api/v1/complaint/addNewComplaint}">Raise Complaint</a></li>
           <li><a th:href="@{/api/v1/complaint/showComplaintsByUsername(username=${#authentication.getName()})}">Complaint List</a></li>
-          <li><a th:href="@{/api/v1/complaint/showAllProductInquiriesByName(username=${#authentication.getName()})}">Product Inquiry List</a></li>
+          <li><a th:href="@{/api/v1/inquiry/showAllProductInquiriesByName(username=${#authentication.getName()})}">Product Inquiry List</a></li>
         </div>
 
         <div sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
@@ -230,22 +276,21 @@
 
       </ul>
     </nav>
-    <select class="input-opt-2">
-      <option selected disabled id="opt">
-        <a href="#">Hello, User</a>
-      </option>
-      <option><a href="#">My Profile</a></option>
-      <option><a href="#">Change Password</a></option>
-      <option><a href="#">Logout</a></option>
-    </select>
+    <div class="dropdown">
+      <a>Hello, User</a>
+      <div class="dropdown-options">
+        <a href="#">Dashboard</a>
+        <a href="#">Setting</a>
+        <a href="#">Logout</a>
+      </div>
+    </div>
   </header>
   <div class="form-box">
     <div class="title">
       <h2 id="h2-title">Raise Complaint</h2>
     </div>
-    <form  th:action="@{/api/v1/complaint/updateComplaint/}+${complaint.id}" th:object="${complaint}" id="login" class="input-group" method="put">
+    <form  sec:authorize="hasAnyAuthority('ROLE_USER')" th:action="@{/api/v1/complaint/updateComplaintByUsername/{id}/{username}(id=${complaint.id},username=${#authentication.getName()})}" th:object="${complaint}" id="login" class="input-group" method="put">
 
-      <div sec:authorize="hasAnyAuthority('ROLE_USER')" >
         <input
                 type="text"
                 th:field="*{id}"
@@ -275,9 +320,10 @@
                 placeholder="Write Your Details"
                 rows="8"
         ></textarea>
-      </div>
+      <button type="submit" class="submit-btn">Submit</button>
+    </form>
+    <form sec:authorize="hasAnyAuthority('ROLE_ADMIN')" th:action="@{/api/v1/complaint/updateComplaint/}+${complaint.id}" th:object="${complaint}" id="login" class="input-group-2" method="put">
 
-      <div sec:authorize="hasAnyAuthority('ROLE_ADMIN')" >
       <input
               type="text"
               th:field="*{id}"
@@ -317,9 +363,10 @@
                 placeholder="Enter Answer"
                 required
         />
-      </div>
       <button type="submit" class="submit-btn">Submit</button>
     </form>
+
+
   </div>
 </div>
 </body>
