--- a/src/main/resources/templates/update-inquiry-form.html
+++ b/src/main/resources/templates/update-inquiry-form.html
@@ -82,6 +82,46 @@
   .nav__links li a:hover {
     color: white;
   }
+
+  .dropdown{
+    color: black;
+    background-color: rgba(0, 136, 169, 1);
+    display: inline-block;
+    position: relative;
+    font-size: 16px;
+    padding: 9px 20px;
+  }
+  .dropdown-options {
+    color: black;
+    background-color: rgba(0, 136, 169, 1);
+    width: 89.5px;
+    font-size: 14px;
+    padding: 15px 15px 15px 15px;
+    right: 0;
+    text-align: center;
+    display: none;
+    position: absolute;
+    overflow: auto;
+    border-radius:5px;
+    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.4);
+  }
+  .dropdown-options a{
+    display: block;
+    color: #000000;
+    text-decoration: none;
+    padding:17px 10px;
+  }
+
+  .dropdown-options a:hover {
+    color: #0a0a23;
+    background-color: white;
+  }
+
+  .dropdown:hover .dropdown-options {
+    display: block;
+    background-color: rgba(0, 136, 169, 0.8);
+    text-align: center;
+  }
   /******************************************************************/
   .form-box {
     width: 380px;
@@ -191,7 +231,7 @@
           <li><a th:href="@{/api/v1/inquiry/addNewProductInquiry(username=${#authentication.getName()})}">Product Inquiry</a></li>
           <li><a th:href="@{/api/v1/complaint/addNewComplaint(username=${#authentication.getName()})}">Raise Complaint</a></li>
           <li><a th:href="@{/api/v1/complaint/showComplaintsByUsername(username=${#authentication.getName()})}">Complaint List</a></li>
-          <li><a th:href="@{/api/v1/complaint/showAllProductInquiriesByName(username=${#authentication.getName()})}">Product Inquiry List</a></li>
+          <li><a th:href="@{/api/v1/inquiry/showAllProductInquiriesByName(username=${#authentication.getName()})}">Product Inquiry List</a></li>
         </div>
 
         <div sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
@@ -202,31 +242,43 @@
         </div>
       </ul>
     </nav>
-    <select class="input-opt-2">
-      <option selected disabled id="opt">
-        <a href="#">Hello, User</a>
-      </option>
-      <option><a href="#">My Profile</a></option>
-      <option><a href="#">Change Password</a></option>
-      <option><a href="#">Logout</a></option>
-    </select>
+    <div class="dropdown">
+      <a>Hello, User</a>
+      <div class="dropdown-options">
+        <a href="#">Dashboard</a>
+        <a href="#">Setting</a>
+        <a href="#">Logout</a>
+      </div>
+    </div>
   </header>
   <div class="form-box">
     <div class="title">
       <h2>Update Product Inquiry</h2>
     </div>
-    <form th:action="@{/api/v1/inquiry/updateInquiry/}+${productInquiry.id}" th:object="${productInquiry}"
+    <form sec:authorize="hasAnyAuthority('ROLE_USER')" th:action="@{/api/v1/inquiry/updateInquiryByUsername/{id}/{username}(id=${productInquiry.id},username=${#authentication.getName()})}" th:object="${productInquiry}"
           method="put" id="register" class="input-group">
 
       <input type="text" th:field="*{productCategory}" readonly class="input-field" placeholder=" Product Category" required/>
-
 
       <textarea th:field="*{details}" class="input-field" placeholder=" Details" required rows="5"
       ></textarea>
       <input type="email" th:field="*{mail}" class="input-field" placeholder=" Email" required
       />
-      <button th:href="@{/api/v1/inquiry/showList}" type="submit" class="submit-btn">Update</button>
+      <button type="submit" class="submit-btn">Update</button>
     </form>
+
+    <form sec:authorize="hasAnyAuthority('ROLE_ADMIN')" th:action="@{/api/v1/inquiry/updateInquiry/}+${productInquiry.id}" th:object="${productInquiry}"
+          method="put" id="register" class="input-group">
+
+      <input type="text" th:field="*{productCategory}" readonly class="input-field" placeholder=" Product Category" required/>
+
+      <textarea th:field="*{details}" class="input-field" placeholder=" Details" required rows="5"
+      ></textarea>
+      <input type="email" th:field="*{mail}" class="input-field" placeholder=" Email" required
+      />
+      <button type="submit" class="submit-btn">Update</button>
+    </form>
+
   </div>
 </div>
 </body>
