--- a/src/main/resources/templates/update-product-form.html
+++ b/src/main/resources/templates/update-product-form.html
@@ -72,7 +72,7 @@
 
   .nav__links li {
     display: inline-block;
-    padding: 0px 20px;
+    padding: 0 20px;
   }
 
   .nav__links li a {
@@ -94,7 +94,7 @@
   .dropdown-options {
     color: black;
     background-color: rgba(0, 136, 169, 1);
-    width: 89.5px;
+    width: 89px;
     font-size: 14px;
     padding: 15px 15px 15px 15px;
     right: 0;
@@ -103,7 +103,7 @@
     position: absolute;
     overflow: auto;
     border-radius:5px;
-    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.4);
+    box-shadow: 0 10px 10px 0 rgba(0,0,0,0.4);
   }
   .dropdown-options a{
     display: block;
@@ -208,7 +208,7 @@
   .input-opt {
     color: #777;
     width: 100%;
-    padding: 10px 0px;
+    padding: 10px 0;
     margin: 5px 0;
     border-left: 0;
     border-top: 0;
