--- a/src/main/resources/templates/change-password.html
+++ b/src/main/resources/templates/change-password.html
@@ -13,6 +13,7 @@
         font-family: sans-serif;
       }
       .hero {
+        z-index: -2;
         height: 100%;
         width: 100%;
         background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
@@ -22,12 +23,10 @@
         position: absolute;
       }
 
-      /****************************************************************/
-
+      /*****************************************************************/
       header {
         box-sizing: border-box;
         backdrop-filter: blur(10px);
-        background-color: #777;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -69,10 +68,6 @@
         background-color: rgba(0, 136, 169, 0.8);
       }
 
-      .logo {
-        cursor: pointer;
-      }
-
       .nav__links {
         list-style: none;
       }
@@ -99,9 +94,10 @@
         padding: 9px 20px;
       }
       .dropdown-options {
+        z-index: 1;
         color: black;
         background-color: rgba(0, 136, 169, 1);
-        width: 89.5px;
+        width: 89px;
         font-size: 14px;
         padding: 15px 15px 15px 15px;
         right: 0;
@@ -110,9 +106,10 @@
         position: absolute;
         overflow: auto;
         border-radius:5px;
-        box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.4);
+        box-shadow: 0 10px 10px 0 rgba(0,0,0,0.4);
       }
       .dropdown-options a{
+        z-index: 1;
         display: block;
         color: #000000;
         text-decoration: none;
@@ -129,8 +126,9 @@
         background-color: rgba(0, 136, 169, 0.8);
         text-align: center;
       }
-      /******************************************************************/
+      /*****************************************************************/
       .form-box {
+        z-index: -1;
         width: 380px;
         height: 480px;
         position: relative;
