--- a/src/main/resources/templates/complaint-list-by-username.html
+++ b/src/main/resources/templates/complaint-list-by-username.html
@@ -90,7 +90,6 @@
             color: white;
         }
 
-
         .dropdown{
             color: black;
             background-color: rgba(0, 136, 169, 1);
@@ -103,7 +102,7 @@
             z-index: 1;
             color: black;
             background-color: rgba(0, 136, 169, 1);
-            width: 119.5px;
+            width: 119px;
             font-size: 14px;
             padding: 15px 15px 15px 15px;
             right: 0;
@@ -112,7 +111,7 @@
             position: absolute;
             overflow: auto;
             border-radius:5px;
-            box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.4);
+            box-shadow: 0 10px 10px 0 rgba(0,0,0,0.4);
         }
         .dropdown-options a{
             z-index: 1;
