--- a/src/main/resources/templates/complaint-list.html
+++ b/src/main/resources/templates/complaint-list.html
@@ -18,6 +18,7 @@
             font-family: sans-serif;
         }
         .hero {
+            z-index: -2;
             height: 100%;
             width: 100%;
             background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
@@ -89,7 +90,6 @@
             color: white;
         }
 
-
         .dropdown{
             color: black;
             background-color: rgba(0, 136, 169, 1);
@@ -99,9 +99,10 @@
             padding: 9px 20px;
         }
         .dropdown-options {
+            z-index: 1;
             color: black;
             background-color: rgba(0, 136, 169, 1);
-            width: 89.5px;
+            width: 119px;
             font-size: 14px;
             padding: 15px 15px 15px 15px;
             right: 0;
@@ -110,9 +111,10 @@
             position: absolute;
             overflow: auto;
             border-radius:5px;
-            box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.4);
+            box-shadow: 0 10px 10px 0 rgba(0,0,0,0.4);
         }
         .dropdown-options a{
+            z-index: 1;
             display: block;
             color: #000000;
             text-decoration: none;
@@ -132,6 +134,7 @@
         /*****************************************************************/
 
         .form-box {
+            z-index: -1;
             width: 92%;
             height: 80%;
             position: relative;
