--- a/src/main/resources/templates/product-category-list-by-username.html
+++ b/src/main/resources/templates/product-category-list-by-username.html
@@ -238,7 +238,7 @@
       <div class="dropdown-options">
         <a href="#">Dashboard</a>
         <a href="#">Setting</a>
-        <a href="#">Logout</a>
+        <a th:href="@{/logout}">Logout</a>
       </div>
     </div>
   </header>
