--- a/src/main/resources/templates/product-inquiry.html
+++ b/src/main/resources/templates/product-inquiry.html
@@ -253,7 +253,7 @@
       <div class="dropdown-options">
         <a href="#">Dashboard</a>
         <a href="#">Setting</a>
-        <a href="#">Logout</a>
+        <a th:href="@{/logout}">Logout</a>
       </div>
     </div>
   </header>
@@ -261,7 +261,7 @@
     <div class="title">
       <h2>Product Inquiry</h2>
     </div>
-    <form  th:action="@{/api/v1/inquiry/saveNewProductInquiry}" th:object="${productInquiry}"  id="register" class="input-group">
+    <form  th:action="@{/api/v1/inquiry/saveNewProductInquiry/{username}(username=${#authentication.getName()})}" th:object="${productInquiry}"  id="register" class="input-group">
 
       <select th:field="*{productName}"  class="input-opt">
         <option th:each="a,iterStatus : ${productList}" th:text="${a.productName}" th:value="${a.productName}" id="opt2">Choose a Product</option>
