added add-product to navbar

--- a/src/main/resources/templates/change-password.html
+++ b/src/main/resources/templates/change-password.html
@@ -248,6 +248,7 @@
               <li><a th:href="@{/api/v1/product/showAllProducts}">Product Details List</a></li>
               <li><a th:href="@{/api/v1/complaint/showList}">Complaint List</a></li>
               <li><a th:href="@{/api/v1/inquiry/showList}">Product Inquiry List</a></li>
+              <li><a th:href="@{/api/v1/product/addNewProduct}">Add new Product</a></li>
             </div>
           </ul>
         </nav>
