--- a/src/main/resources/templates/add-product.html
+++ b/src/main/resources/templates/add-product.html
@@ -239,12 +239,13 @@
               <li><a th:href="@{/api/v1/complaint/showComplaintsByUsername(username=${#authentication.getName()})}">Complaint List</a></li>
               <li><a th:href="@{/api/v1/inquiry/showAllProductInquiriesByName(username=${#authentication.getName()})}">Product Inquiry List</a></li>
             </div>
-            
+
             <div sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
               <li><a th:href="@{/api/v1/product/categoryList}">Product Category List</a></li>
               <li><a th:href="@{/api/v1/product/showAllProducts}">Product Details List</a></li>
               <li><a th:href="@{/api/v1/complaint/showList}">Complaint List</a></li>
               <li><a th:href="@{/api/v1/inquiry/showList}">Product Inquiry List</a></li>
+              <li><a th:href="@{/api/v1/product/addNewProduct}">Add new Product</a></li>
             </div>
           </ul>
         </nav>
