--- a/src/main/resources/templates/update-complaint-form.html
+++ b/src/main/resources/templates/update-complaint-form.html
@@ -269,9 +269,9 @@
         <div sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
           <li><a th:href="@{/api/v1/product/categoryList}">Product Category List</a></li>
           <li><a th:href="@{/api/v1/product/showAllProducts}">Product Details List</a></li>
-          <li><a th:href="@{/api/v1/inquiry/addNewProductInquiry}">Product Inquiry</a></li>
           <li><a th:href="@{/api/v1/complaint/showList}">Complaint List</a></li>
           <li><a th:href="@{/api/v1/inquiry/showList}">Product Inquiry List</a></li>
+          <li><a th:href="@{/api/v1/product/addNewProduct}">Add new Product</a></li>
         </div>
 
       </ul>
