--- a/src/main/resources/templates/change-password.html
+++ b/src/main/resources/templates/change-password.html
@@ -266,16 +266,18 @@
           <h2 id="h2-title">CRM System</h2>
           <h3 id="h3-title">Change Password</h3>
         </div>
-        <form id="login" class="input-group">
+        <form th:action="@{/submitPassword/{username}(username=${#authentication.getName()})}" id="login" class="input-group" th:object="${passwordDTO}">
           <input
             type="password"
             class="input-field"
+            th:field="*{oldPassword}"
             placeholder="Enter old password"
             required
           />
           <input
             type="password"
             class="input-field"
+            th:field="*{newPassword}"
             placeholder="Enter new password"
             required
           />
