added validation for product name and details

--- a/src/main/resources/templates/add-product.html
+++ b/src/main/resources/templates/add-product.html
@@ -276,6 +276,7 @@
             class="input-field"
             placeholder=" Product Name"
             required
+            minlength="3"
           />
           <textarea
                   th:field="*{details}"
@@ -283,6 +284,7 @@
             placeholder=" Details"
             required
             rows="3"
+                  minlength="5"
           ></textarea>
           <input
             type="number"
